added more player handshakes for better monitoring

--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -380,6 +380,7 @@
 
         $( "#rotate-in" ).click(function() {
           socket.emit('rotateAll', { my: 'data' });
+          socket.emit('updatePlayerConnectedState', { my: 'data' });
           $('#rotate-in').prop('disabled', true);
         });
 
