moved ready button up on guest page

--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -1238,27 +1238,22 @@
     </div>
     <!-- END PLAYER -->
 
-    <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--12-col text-align-center">
+    <div class="mdl-grid player align-items-center">
+      <div class="mdl-cell mdl-cell--1-col">
+      </div>
+      <div class="mdl-cell mdl-cell--5-col text-align-center">
         <button id="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored button-large">
           Submit
         </button>
       </div>
-    </div>
-
-    <div class="mdl-grid ready-switch-table">
-      <div class="mdl-cell mdl-cell--12-col">
-        <div class="ready-switch-table-cell">
-          <span class="text-large">Ready</span>
-        </div>
+      <div class="mdl-cell mdl-cell--3-col text-align-right">
+        <span class="text-large">Ready</span>
       </div>
-      <div class="mdl-cell mdl-cell--12-col ready-switch-margin">
-        <div class="ready-switch-table-cell">
-          <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-ready">
-            <input type="checkbox" id="switch-ready" class="mdl-switch__input" >
-            <span class="mdl-switch__label"></span>
-          </label>
-        </div>
+      <div class="mdl-cell mdl-cell--3-col">
+        <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-ready">
+          <input type="checkbox" id="switch-ready" class="mdl-switch__input" >
+          <span class="mdl-switch__label"></span>
+        </label>
       </div>
     </div>
   </body>
