--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,10 @@
   padding-right: 15px;
 }
 
+.mdl-button {
+	margin: 5px;
+}
+
 /* Layout */
 .header {
   background-color: #ff4081;
@@ -64,7 +68,7 @@
 .button-large {
   width: 400px;
   height: 75px;
-  margin-bottom: 5px;
+  margin: 0;
   font-size: 30px;
   text-transform: uppercase;
 }
