--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -181,25 +181,27 @@
         }
       });
 
-        /* Listen for any game state changes */
-        socket.on('currentState', function(data) {
-          if(data == 0) {
-            setupState();
-            console.log('setup');
-          } else if(data == 1) {
-            readyState();
-            console.log('ready');
-          } else if(data == 2) {
-            ingameState();
-            console.log('ingame');
-          } else if(data == 3) {
-            console.log('end');
-          } else if(data == 4) {
-            console.log('reset');
-          } else {
-            console.log('invalid currentState');
-          }
-        });
+      /* Listen for any game state changes */
+      socket.on('currentState', function(data) {
+        if(data == 0) {
+          setupState();
+          console.log('setup');
+        } else if(data == 1) {
+          readyState();
+          console.log('ready');
+        } else if(data == 2) {
+          ingameState();
+          console.log('ingame');
+        } else if(data == 3) {
+          console.log('end');
+          location.reload();
+        } else if(data == 4) {
+          console.log('reset');
+          location.reload();
+        } else {
+          console.log('invalid currentState');
+        }
+      });
 
       /* Listen for player connection updates */  
       socket.on('playerConnectedStateResponse', function(data) {
