add feedback for when endgame button is pressed

--- a/src/views/gameplay.html
+++ b/src/views/gameplay.html
@@ -434,6 +434,7 @@
 
         $( "#endgame" ).click(function() {
           socket.emit('gameRestart', { my: 'data' });
+          $('#endgame').prop('disabled', true);
         });
 
         $( "#reset" ).click(function() {
